# home_work_4

./: .coverage  16.2_main.py  README.md  pyproject.toml
src/: category.py  iterator.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_product.py
